# pyladies-sao-carlos-website

./: CNAME  CONTRIBUTING  ISSUE_TEMPLATE  README.md  archives.html  authors.html  categories.html  index.html  novo-site-do-pyladies-sao-carlos.html  pelicanconf.py  pyproject.toml  pyquenique-2023-recepcao-das-novas-membras.html  pyquenique-2024-recepcao-das-novas-integrantes.html  requirements.txt  tags.html
.github/: CODEOWNERS
.github/workflows/: pelican.yml
author/: ana-carolina-rodrigues.html  juliana-karoline-de-sousa.html
category/: pyquenique.html  site.html
content/: 2023-10-22--novo-site.md  2023-10-23--pyquenique-2023.md  2024-05-24--pyquenique-2024.md
content/pages/: home.md  parcerias.md
output/: parcerias.html
tag/: pyquenique.html  site.html
theme/css/: screen.css
themes/pelican-mediumfox/templates/: archives.html  article.html  base.html  index.html
