[tool.poetry]
name = "site pyladies são carlos"
version = "0.1.0"
description = ""
authors = ["Juliana Karoline <julianaklulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
